generated/MyLangParser.py
# Generated from MyLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyLangParser ( Parser ):

    grammarFileName = "MyLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'cout'", "','", "'='", "'if'", "':'", 
                     "'else'", "'end'", "'+'", "'-'", "'*'", "'/'", "'%'", 
                     "'T'", "'inv'", "'sin'", "'cos'", "'tan'", "'asin'", 
                     "'acos'", "'atan'", "'atan2'", "'sinh'", "'cosh'", 
                     "'tanh'", "'sqrt'", "'log'", "'log10'", "'exp'", "'pow'", 
                     "'fabs'", "'ceil'", "'floor'", "'trunc'", "'factorial'", 
                     "'gcd'", "'comb'", "'isfinite'", "'isinf'", "'isnan'", 
                     "'abs'", "'degrees'", "'return'", "'open'", "'.read'", 
                     "'.write'", "'.close'", "'import'", "'['", "']'", "'.append'", 
                     "'for'", "'in'", "'funcion'", "'{'", "'}'", "'while'", 
                     "'>'", "'<'", "'=='", "'!='", "'('", "')'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "TKN_PAR_IZ", "TKN_PAR_DER", "IDENT", 
                      "NUMBER", "STRING", "WS", "COMMENT", "NEWLINE" ]

    RULE_program = 0
    RULE_stmt = 1
    RULE_print_stmt = 2
    RULE_assign_stmt = 3
    RULE_expr_stmt = 4
    RULE_cond_stmt = 5
    RULE_expr = 6
    RULE_math_func = 7
    RULE_return_stmt = 8
    RULE_file_open_stmt = 9
    RULE_file_read_stmt = 10
    RULE_file_write_stmt = 11
    RULE_file_close_stmt = 12
    RULE_import_stmt = 13
    RULE_array_expr = 14
    RULE_array_op = 15
    RULE_array_append = 16
    RULE_for_stmt = 17
    RULE_range_ = 18
    RULE_functiondef = 19
    RULE_parametros = 20
    RULE_func_call = 21
    RULE_while_stmt = 22
    RULE_condition = 23

    ruleNames =  [ "program", "stmt", "print_stmt", "assign_stmt", "expr_stmt", 
                   "cond_stmt", "expr", "math_func", "return_stmt", "file_open_stmt", 
                   "file_read_stmt", "file_write_stmt", "file_close_stmt", 
                   "import_stmt", "array_expr", "array_op", "array_append", 
                   "for_stmt", "range_", "functiondef", "parametros", "func_call", 
                   "while_stmt", "condition" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    TKN_PAR_IZ=61
    TKN_PAR_DER=62
    IDENT=63
    NUMBER=64
    STRING=65
    WS=66
    COMMENT=67
    NEWLINE=68

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(MyLangParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(MyLangParser.StmtContext,i)


        def getRuleIndex(self):
            return MyLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = MyLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 49 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 48
                self.stmt()
                self.state = 51 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -9139624435190349806) != 0) or _la==64 or _la==65):
                    break

            self.state = 53
            self.match(MyLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign_stmt(self):
            return self.getTypedRuleContext(MyLangParser.Assign_stmtContext,0)


        def print_stmt(self):
            return self.getTypedRuleContext(MyLangParser.Print_stmtContext,0)


        def expr_stmt(self):
            return self.getTypedRuleContext(MyLangParser.Expr_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(MyLangParser.For_stmtContext,0)


        def cond_stmt(self):
            return self.getTypedRuleContext(MyLangParser.Cond_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(MyLangParser.While_stmtContext,0)


        def functiondef(self):
            return self.getTypedRuleContext(MyLangParser.FunctiondefContext,0)


        def array_append(self):
            return self.getTypedRuleContext(MyLangParser.Array_appendContext,0)


        def import_stmt(self):
            return self.getTypedRuleContext(MyLangParser.Import_stmtContext,0)


        def file_open_stmt(self):
            return self.getTypedRuleContext(MyLangParser.File_open_stmtContext,0)


        def file_read_stmt(self):
            return self.getTypedRuleContext(MyLangParser.File_read_stmtContext,0)


        def file_write_stmt(self):
            return self.getTypedRuleContext(MyLangParser.File_write_stmtContext,0)


        def file_close_stmt(self):
            return self.getTypedRuleContext(MyLangParser.File_close_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(MyLangParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return MyLangParser.RULE_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStmt" ):
                listener.enterStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStmt" ):
                listener.exitStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = MyLangParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stmt)
        try:
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 55
                self.assign_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.print_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 57
                self.expr_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 58
                self.for_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 59
                self.cond_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 60
                self.while_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 61
                self.functiondef()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 62
                self.array_append()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 63
                self.import_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 64
                self.file_open_stmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 65
                self.file_read_stmt()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 66
                self.file_write_stmt()
                pass

            elif la_ == 13:
                self.enterOuterAlt(localctx, 13)
                self.state = 67
                self.file_close_stmt()
                pass

            elif la_ == 14:
                self.enterOuterAlt(localctx, 14)
                self.state = 68
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_PAR_IZ(self):
            return self.getToken(MyLangParser.TKN_PAR_IZ, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyLangParser.ExprContext,i)


        def TKN_PAR_DER(self):
            return self.getToken(MyLangParser.TKN_PAR_DER, 0)

        def getRuleIndex(self):
            return MyLangParser.RULE_print_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_stmt" ):
                listener.enterPrint_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_stmt" ):
                listener.exitPrint_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_stmt" ):
                return visitor.visitPrint_stmt(self)
            else:
                return visitor.visitChildren(self)




    def print_stmt(self):

        localctx = MyLangParser.Print_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_print_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(MyLangParser.T__0)
            self.state = 72
            self.match(MyLangParser.TKN_PAR_IZ)
            self.state = 73
            self.expr(0)
            self.state = 78
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==2:
                self.state = 74
                self.match(MyLangParser.T__1)
                self.state = 75
                self.expr(0)
                self.state = 80
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 81
            self.match(MyLangParser.TKN_PAR_DER)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assign_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENT(self):
            return self.getToken(MyLangParser.IDENT, 0)

        def expr(self):
            return self.getTypedRuleContext(MyLangParser.ExprContext,0)


        def getRuleIndex(self):
            return MyLangParser.RULE_assign_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssign_stmt" ):
                listener.enterAssign_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssign_stmt" ):
                listener.exitAssign_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign_stmt" ):
                return visitor.visitAssign_stmt(self)
            else:
                return visitor.visitChildren(self)




    def assign_stmt(self):

        localctx = MyLangParser.Assign_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assign_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(MyLangParser.IDENT)
            self.state = 84
            self.match(MyLangParser.T__2)
            self.state = 85
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(MyLangParser.ExprContext,0)


        def getRuleIndex(self):
            return MyLangParser.RULE_expr_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_stmt" ):
                listener.enterExpr_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_stmt" ):
                listener.exitExpr_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_stmt" ):
                return visitor.visitExpr_stmt(self)
            else:
                return visitor.visitChildren(self)




    def expr_stmt(self):

        localctx = MyLangParser.Expr_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_expr_stmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Cond_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condition(self):
            return self.getTypedRuleContext(MyLangParser.ConditionContext,0)


        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.StmtContext)
            else:
                return self.getTypedRuleContext(MyLangParser.StmtContext,i)


        def getRuleIndex(self):
            return MyLangParser.RULE_cond_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCond_stmt" ):
                listener.enterCond_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCond_stmt" ):
                listener.exitCond_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCond_stmt" ):
                return visitor.visitCond_stmt(self)
            else:
                return visitor.visitChildren(self)




    def cond_stmt(self):

        localctx = MyLangParser.Cond_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_cond_stmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(MyLangParser.T__3)
            self.state = 90
            self.condition()
            self.state = 91
            self.match(MyLangParser.T__4)
            self.state = 93 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 92
                self.stmt()
                self.state = 95 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -9139624435190349806) != 0) or _la==64 or _la==65):
                    break

            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6:
                self.state = 97
                self.match(MyLangParser.T__5)
                self.state = 98
                self.match(MyLangParser.T__4)
                self.state = 100 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 99
                    self.stmt()
                    self.state = 102 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & -9139624435190349806) != 0) or _la==64 or _la==65):
                        break



            self.state = 106
            self.match(MyLangParser.T__6)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def array_op(self):
            return self.getTypedRuleContext(MyLangParser.Array_opContext,0)


        def array_expr(self):
            return self.getTypedRuleContext(MyLangParser.Array_exprContext,0)


        def IDENT(self):
            return self.getToken(MyLangParser.IDENT, 0)

        def NUMBER(self):
            return self.getToken(MyLangParser.NUMBER, 0)

        def STRING(self):
            return self.getToken(MyLangParser.STRING, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyLangParser.ExprContext,i)


        def math_func(self):
            return self.getTypedRuleContext(MyLangParser.Math_funcContext,0)


        def func_call(self):
            return self.getTypedRuleContext(MyLangParser.Func_callContext,0)


        def getRuleIndex(self):
            return MyLangParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = MyLangParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 109
                self.array_op()
                pass

            elif la_ == 2:
                self.state = 110
                self.array_expr()
                pass

            elif la_ == 3:
                self.state = 111
                self.match(MyLangParser.IDENT)
                pass

            elif la_ == 4:
                self.state = 112
                self.match(MyLangParser.NUMBER)
                pass

            elif la_ == 5:
                self.state = 113
                self.match(MyLangParser.STRING)
                pass

            elif la_ == 6:
                self.state = 114
                self.match(MyLangParser.T__13)
                self.state = 115
                self.expr(3)
                pass

            elif la_ == 7:
                self.state = 116
                self.math_func()
                pass

            elif la_ == 8:
                self.state = 117
                self.func_call()
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 125
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                    if la_ == 1:
                        localctx = MyLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 120
                        if not self.precpred(self._ctx, 10):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 10)")
                        self.state = 121
                        _la = self._input.LA(1)
                        if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 32512) != 0)):
                            self._errHandler.recoverInline(self)
                        else:
                            self._errHandler.reportMatch(self)
                            self.consume()
                        self.state = 122
                        self.expr(11)
                        pass

                    elif la_ == 2:
                        localctx = MyLangParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 123
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 124
                        self.match(MyLangParser.T__12)
                        pass

             
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Math_funcContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TKN_PAR_IZ(self):
            return self.getToken(MyLangParser.TKN_PAR_IZ, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyLangParser.ExprContext)
            else:
                return self.getTypedRuleContext(MyLangParser.ExprContext,i)


        def TKN_PAR_DER(self):
            return self.getToken(MyLangParser.TKN_PAR_DER, 0)

        def getRuleIndex(self):
            return MyLangParser.RULE_math_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMath_func" ):
                listener.enterMath_func(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMath_func" ):
                listener.exitMath_func(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMath_func" ):
                return visitor.visitMath_func(self)
            else:
                return visitor.visitChildren(self)




    def math_func(self):
